# porter

./: .gitmodules  README.md  pyproject.toml
porter/: __init__.py  ast.py  cli.py  ivy_shim.py  ivy_to_java.py
porter/ast/: __init__.py  sorts.py  terms.py  toplevels.py  visitor.py
porter/ast/sorts/: __init__.py  visitor.py
porter/ast/terms/: __init__.py  visitor.py
porter/extraction/: __init__.py  java.py  native.py
porter/extraction/java/: __init__.py  quantifiers.py  sorts.py  terms.py  utils.py
porter/extraction/scala/: __init__.py  helpers.py  quantifiers.py  sorts.py  terms.py  utils.py
porter/ivy/: __init__.py  config.py  extensionality.py  shims.py
porter/passes/: extensionality.py  freevars.py  logic_vars.py  native_rewriter.py  quantifiers.py  reinterpret_uninterps.py
porter/pp/: __init__.py  block_scoped.py  formatter.py  utils.py
porter/quantifiers/: __init__.py  bounds.py  extensionality.py
tests/: __init__.py  test_actions.py  test_binding.py  test_exprs.py  test_extensionality.py  test_extraction.py  test_java_extraction.py  test_modules.py  test_passes.py  test_pp.py  test_programs.py  test_quantifiers.py  test_record.py  test_visitor.py
tests/programs/: 001_hello.ivy  002_append1.ivy  003_linchain.ivy  004_relations_and_invariants.ivy  005_counter.ivy  006_pingpong.ivy  007_counter.ivy  008_livelock.ivy
