[tool.poetry]
name = "porter"
version = "0.1.0"
description = ""
authors = ["Nathan Taylor <ntaylor@cs.utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "8.1.3"
#ms-ivy = { git = "https://github.com/kenmcmil/ivy/" } # TODO: version pin?

[tool.poetry.dev-dependencies]
pytest = "7.4.4"

# Transitive dependencies for IVy
ply = "3.11"
pydot = "1.4.2"
six = "1.16.0"
tarjan = "0.2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extract = 'porter:extract'

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-v"]
